--- a/audiapi/templates/audiapi/index.html
+++ b/audiapi/templates/audiapi/index.html
@@ -35,7 +35,7 @@
                     const model_car_select = document.getElementById("model_car");
                     model_car_select.innerHTML = "";
                     model_cars.forEach(model_car => {
-                        model_car_select.append(`<option>${model_car["gen"]}</option>`);
+                        model_car_select.append(`<option>${model_car["generation"]}</option>`);
                     });
                 })
                 .catch(err => console.error(err));
