--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -1,5 +1,6 @@
 {% extends 'webapp/base.html' %}
 {% load static %}
+{% load webapp_tags %}
 
 
 {% block content %}
@@ -76,107 +77,8 @@
 </div>
 <!-- /About -->
 
-<!-- Courses -->
-<div id="courses" class="section">
-
-	<!-- container -->
-	<div class="container">
-
-		<!-- row -->
-		<div class="row">
-			<div class="section-header text-center">
-				<h2>Модели автомобилей</h2>
-				<p class="lead">Ознакомьтесь с модельным рядом и поколениями</p>
-			</div>
-		</div>
-		<!-- /row -->
-
-		<!-- courses -->
-		<div id="courses-wrapper">
-
-			<!-- row -->
-			<div class="row">
-
-				<!-- single course -->
-				<div class="col-md-3 col-sm-6 col-xs-6">
-					<div class="course">
-						<a href="#" class="course-img">
-							<img src="{% static 'webapp/img/course01.jpg' %}" alt="">
-							<i class="course-link-icon fa fa-link"></i>
-						</a>
-						<a class="course-title" href="#">Beginner to Pro in Excel: Financial Modeling and Valuation</a>
-						<div class="course-details">
-							<span class="course-category">Business</span>
-							<span class="course-price course-free">Free</span>
-						</div>
-					</div>
-				</div>
-				<!-- /single course -->
-
-				<!-- single course -->
-				<div class="col-md-3 col-sm-6 col-xs-6">
-					<div class="course">
-						<a href="#" class="course-img">
-							<img src="{% static 'webapp/img/course02.jpg' %}" alt="">
-							<i class="course-link-icon fa fa-link"></i>
-						</a>
-						<a class="course-title" href="#">Introduction to CSS </a>
-						<div class="course-details">
-							<span class="course-category">Web Design</span>
-							<span class="course-price course-premium">Premium</span>
-						</div>
-					</div>
-				</div>
-				<!-- /single course -->
-
-				<!-- single course -->
-				<div class="col-md-3 col-sm-6 col-xs-6">
-					<div class="course">
-						<a href="#" class="course-img">
-							<img src="{% static 'webapp/img/course03.jpg' %}" alt="">
-							<i class="course-link-icon fa fa-link"></i>
-						</a>
-						<a class="course-title" href="#">The Ultimate Drawing Course | From Beginner To Advanced</a>
-						<div class="course-details">
-							<span class="course-category">Drawing</span>
-							<span class="course-price course-premium">Premium</span>
-						</div>
-					</div>
-				</div>
-				<!-- /single course -->
-
-				<div class="col-md-3 col-sm-6 col-xs-6">
-					<div class="course">
-						<a href="#" class="course-img">
-							<img src="{% static 'webapp/img/course04.jpg' %}" alt="">
-							<i class="course-link-icon fa fa-link"></i>
-						</a>
-						<a class="course-title" href="#">The Complete Web Development Course</a>
-						<div class="course-details">
-							<span class="course-category">Web Development</span>
-							<span class="course-price course-free">Free</span>
-						</div>
-					</div>
-				</div>
-				<!-- /single course -->
-
-			</div>
-			<!-- /row -->
-
-		</div>
-		<!-- /courses -->
-
-		<div class="row">
-			<div class="center-btn">
-				<a class="main-button icon-button" href="#">Все модели</a>
-			</div>
-		</div>
-
-	</div>
-	<!-- container -->
-
-</div>
-<!-- /Courses -->
+<!-- Some Cars -->
+{% somecars %}
 
 <!-- Call To Action -->
 <div id="cta" class="section">
@@ -237,7 +139,7 @@
 </div>
 <!-- /Why us -->
 
-<!-- Contact CTA -->
+<!-- Contact Us -->
 <div id="contact-cta" class="section">
 
 	<!-- Backgound Image -->
@@ -253,7 +155,7 @@
 			<div class="col-md-8 col-md-offset-2 text-center">
 				<h2 class="white-text">Свяжитесь с нами</h2>
 				<p class="lead white-text">Вопросы и предложения с удовольствием рассмотрим, мы открыты для общения!</p>
-				<a class="main-button icon-button" href="#">Связаться</a>
+				<a class="main-button icon-button" href="{% url 'contact' %}">Связаться</a>
 			</div>
 
 		</div>
