--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -82,7 +82,7 @@
 					<!-- footer logo -->
 					<div class="col-md-6">
 						<div class="footer-logo">
-							<a class="logo" href="index.html">
+							<a class="logo" href="{% url 'home' %}">
 								<img src="{% static 'webapp/img/logo.png' %}" alt="logo">
 							</a>
 						</div>
@@ -92,11 +92,9 @@
 					<!-- footer nav -->
 					<div class="col-md-6">
 						<ul class="footer-nav">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Courses</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							{% for link, item in nav_item.items %}
+								<li><a href="{{link}}">{{item}}</a></li>
+							{% endfor %}
 						</ul>
 					</div>
 					<!-- /footer nav -->
