--- a/webapp/templates/webapp/cars.html
+++ b/webapp/templates/webapp/cars.html
@@ -44,7 +44,7 @@
 
 		<div class="row">
 			<div class="center-btn">
-				<a class="main-button icon-button" href="#">Все модели</a>
+				<a class="main-button icon-button" href="{% url 'catalog' %}">Все модели</a>
 			</div>
 		</div>
 
