--- a/webapp/templates/webapp/contact.html
+++ b/webapp/templates/webapp/contact.html
@@ -39,13 +39,13 @@
 			<!-- contact form -->
 			<div class="col-md-6">
 				<div class="contact-form">
-					<h4>Send A Message</h4>
+					<h4>Отправьте сообщение</h4>
 					<form>
-						<input class="input" type="text" name="name" placeholder="Name">
+						<input class="input" type="text" name="name" placeholder="Имя">
 						<input class="input" type="email" name="email" placeholder="Email">
-						<input class="input" type="text" name="subject" placeholder="Subject">
-						<textarea class="input" name="message" placeholder="Enter your Message"></textarea>
-						<button class="main-button icon-button pull-right">Send Message</button>
+						<input class="input" type="text" name="subject" placeholder="Тема письма">
+						<textarea class="input" name="message" placeholder="Введите текст письма..."></textarea>
+						<button class="main-button icon-button pull-right">Отправить</button>
 					</form>
 				</div>
 			</div>
@@ -53,15 +53,16 @@
 
 			<!-- contact information -->
 			<div class="col-md-5 col-md-offset-1">
-				<h4>Contact Information</h4>
+				<h4>Контактная информация</h4>
 				<ul class="contact-details">
-					<li><i class="fa fa-envelope"></i>Educate@email.com</li>
-					<li><i class="fa fa-phone"></i>122-547-223-45</li>
-					<li><i class="fa fa-map-marker"></i>4476 Clement Street</li>
+					<li><i class="fa fa-envelope"></i>volodyabuz@gmail.com</li>
+					<li><i class="fa fa-phone"></i>+7-952-565-59-29</li>
+					<li><i class="fa fa-map-marker"></i>Россия, г. Ростов-на-Дону, ул. Волкова, д. 5</li>
 				</ul>
 
 				<!-- contact map -->
 				<div id="contact-map"></div>
+					<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Afdad463dac250ec8b742ff8fc27fd0f7862b6f1fd6096c2d517622a5c5dcbdc7&amp;source=constructor" width="460" height="270" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 				<!-- /contact map -->
 
 			</div>
