--- a/webapp/templates/webapp/catalog.html
+++ b/webapp/templates/webapp/catalog.html
@@ -8,7 +8,7 @@
 <div class="hero-area section">
 
 	<!-- Backgound Image -->
-	<div class="bg-image bg-parallax overlay" style="background-image:url(./img/page-background.jpg)"></div>
+	<div class="bg-image bg-parallax overlay" style="background-image:url({% static 'webapp/img/page-background.jpg' %})"></div>
 	<!-- /Backgound Image -->
 
 	<div class="container">
@@ -55,7 +55,7 @@
 							<div class="blog-meta">
 								<span class="blog-meta-author">By: <a href="#">{{item.generation}}</a></span>
 								<div class="pull-right">
-									<span>{{item.bodytype}}</span>
+									<span>{{item.body_type}}</span>
 									<span class="blog-meta-comments"><a href="#"><i class="fa fa-comments"></i> 35</a></span>
 								</div>
 							</div>
@@ -73,14 +73,14 @@
 					<!-- pagination -->
 					<div class="col-md-12">
 						<div class="post-pagination">
-							<a href="#" class="pagination-back pull-left">Back</a>
+							<a href="#" class="pagination-back pull-left">Назад</a>
 							<ul class="pages">
 								<li class="active">1</li>
 								<li><a href="#">2</a></li>
 								<li><a href="#">3</a></li>
 								<li><a href="#">4</a></li>
 							</ul>
-							<a href="#" class="pagination-next pull-right">Next</a>
+							<a href="#" class="pagination-next pull-right">Вперед</a>
 						</div>
 					</div>
 					<!-- pagination -->
@@ -96,7 +96,7 @@
 				<!-- search widget -->
 				<div class="widget search-widget">
 					<form>
-						<input class="input" type="text" name="search">
+						<input class="input" type="text" name="search" placeholder="Поиск автомобилей">
 						<button><i class="fa fa-search"></i></button>
 					</form>
 				</div>
@@ -104,18 +104,17 @@
 
 				<!-- category widget -->
 				<div class="widget category-widget">
-					<h3>Categories</h3>
-					<a class="category" href="#">Web <span>12</span></a>
-					<a class="category" href="#">Css <span>5</span></a>
-					<a class="category" href="#">Wordpress <span>24</span></a>
-					<a class="category" href="#">Html <span>78</span></a>
-					<a class="category" href="#">Business <span>36</span></a>
+					<h3>Типы кузовов</h3>
+					{% distincts filter='body_type' as dist %}
+					{% for item in dist %}
+						<a class="category" href="#">{{item.body_type}}<span>12</span></a>
+					{% endfor %}
 				</div>
 				<!-- /category widget -->
 
 				<!-- posts widget -->
 				<div class="widget posts-widget">
-					<h3>Recents Posts</h3>
+					<h3>Последние отзывы</h3>
 
 					<!-- single posts -->
 					<div class="single-post">
@@ -149,20 +148,6 @@
 
 				</div>
 				<!-- /posts widget -->
-
-				<!-- tags widget -->
-				<div class="widget tags-widget">
-					<h3>Tags</h3>
-					<a class="tag" href="#">Web</a>
-					<a class="tag" href="#">Photography</a>
-					<a class="tag" href="#">Css</a>
-					<a class="tag" href="#">Responsive</a>
-					<a class="tag" href="#">Wordpress</a>
-					<a class="tag" href="#">Html</a>
-					<a class="tag" href="#">Website</a>
-					<a class="tag" href="#">Business</a>
-				</div>
-				<!-- /tags widget -->
 
 			</div>
 			<!-- /aside blog -->
