--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -118,9 +118,10 @@
 		<div class="row">
 
 			<div class="col-md-6">
-				<h3>Persius imperdiet incorrupte et qui, munere nusquam et nec.</h3>
-				<p class="lead">Libris vivendo eloquentiam ex ius, nec id splendide abhorreant.</p>
-				<p>No vel facete sententiae, quodsi dolores no quo, pri ex tamquam interesset necessitatibus. Te denique cotidieque delicatissimi sed. Eu doming epicurei duo. Sit ea perfecto deseruisse theophrastus. At sed malis hendrerit, elitr deseruisse in sit, sit ei facilisi mediocrem.</p>
+				<h3>Раздел API для разработчиков</h3>
+				<p class="lead">API нашего сайта позволяет получать информацию напрямую быстро и эффективно.</p>
+				<p>В данном разделе Вам доступны запросы по списку автомобилей, детальная информация по конкретной модели, получение рекомендаций объявлений на почту, авторизация с помощью JWT-токенов.</p>
+				<a class="main-button icon-button" href="{% url 'api-root' %}" style="margin-top:32px">Перейти в раздел</a>
 			</div>
 
 			<div class="col-md-5 col-md-offset-1">
